src/objects/Postal_Zone__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Sector__c</fullName>
        <externalId>true</externalId>
        <label>Postal Sector</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Postal_Zone_Name__c</fullName>
        <label>Postal Zone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Zone__c</fullName>
        <externalId>true</externalId>
        <label>Postal Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Postal Sector</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Postal_Zone_Name__c</columns>
        <columns>Postal_Sector__c</columns>
        <columns>Postal_Zone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Postal Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Sectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>